--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
+rand = "0.8.5"
 
 [dependencies.serenity]
 version = "0.11.5"
