--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,11 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tokio = { version = "1.28.0", features = ["macros", "rt-multi-thread"] }
+tokio = { version = "1.28.0", features = ["full"] }
 rand = "0.8.5"
-
-[dependencies.serenity]
-version = "0.11.5"
-default-features = false
-features = ["client", "gateway", "http", "model", "builder", "rustls_backend"]  # Specify the features you want to use
-
+reqwest = { version = "0.11.17", features = ["json"] }
+serde_json = "1.0.96"
+serenity = { version = "0.11.5", default-features = false, features = ["client", "gateway", "http", "model", "rustls_backend", "cache"] }
